homework/5.kubernetes-network/Deployment_pg.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-deploy
  labels:
    app: postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
      namespace: default
    spec:
      containers:
      - image: postgres:10.13
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: pdata

      hostNetwork: true
