homework/5.kubernetes-network/Deployment_redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-deployment
  labels:
    app: redmine
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redmine
      namespace: default
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
          protocol: TCP
      hostNetwork: true
